Pagina nosotros, contacto culminada

--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@
                             </div>
 
                             <!-- Desktop Menu -->
-                            <div class="hidden md:flex items-center space-x-8">
+                            <div class="hidden md:flex items-center space-x-6">
                                 <a href="#inicio" class="nav-link text-gray-700 hover:text-blue-600" data-page="inicio">Inicio</a>
                                 <a href="#nosotros" class="nav-link text-gray-700 hover:text-blue-600" data-page="nosotros">Nosotros</a>
-                                <a href="#constitucion" class="nav-link text-gray-700 hover:text-blue-600" data-page="constitucion">Constitución</a>
-                                <a href="#servicio-contable" class="nav-link text-gray-700 hover:text-blue-600" data-page="servicio-contable">Servicios</a>
-                                <a href="#facturacion" class="nav-link text-gray-700 hover:text-blue-600" data-page="facturacion">Facturación</a>
-                                <a href="#minutas" class="nav-link text-gray-700 hover:text-blue-600" data-page="minutas">Minutas</a>
+                                <a href="#constitucion" class="nav-link text-gray-700 hover:text-blue-600" data-page="constitucion">Constitución de Empresas</a>
+                                <a href="#servicio-contable" class="nav-link text-gray-700 hover:text-blue-600" data-page="servicio-contable">Servicios Contables</a>
+                                <a href="#facturacion" class="nav-link text-gray-700 hover:text-blue-600" data-page="facturacion">Facturación Electronica</a>
+                                <a href="#minutas" class="nav-link text-gray-700 hover:text-blue-600" data-page="minutas">Elaboracion de Minutas</a>
                                 <a href="#contacto" class="nav-link text-gray-700 hover:text-blue-600" data-page="contacto">Contacto</a>
 
                                 <a 
@@ -263,10 +263,10 @@
                             <div class="flex flex-col space-y-3">
                                 <a href="#inicio" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="inicio">Inicio</a>
                                 <a href="#nosotros" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="nosotros">Nosotros</a>
-                                <a href="#constitucion" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="constitucion">Constitución</a>
-                                <a href="#servicio-contable" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="servicio-contable">Servicios</a>
-                                <a href="#facturacion" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="facturacion">Facturación</a>
-                                <a href="#minutas" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="minutas">Minutas</a>
+                                <a href="#constitucion" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="constitucion">Constitución de Empresas</a>
+                                <a href="#servicio-contable" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="servicio-contable">Servicios Contables</a>
+                                <a href="#facturacion" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="facturacion">Facturación Electronica</a>
+                                <a href="#minutas" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="minutas">Elaboracion deMinutas</a>
                                 <a href="#contacto" class="nav-link text-gray-700 hover:text-blue-600 py-2" data-page="contacto">Contacto</a>
                             </div>
                         </div>
