--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -736,7 +736,7 @@
                                 <div>
                                     <p class="text-xs font-bold text-[#1B3A5F] mb-0.5">Dirección</p>
                                     <p class="text-xs leading-relaxed" style="color: #2B5A8C;">
-                                        Calle - Arequipa - Perú
+                                        Calle Yura - Arequipa 
                                     </p>
                                 </div>
                             </div>
