Finalizacion de paginas

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -36,7 +36,7 @@
                     <h2 class="text-white text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-black leading-tight mb-4">
                         NEXA
                     </h2>
-                    <h2 class="text-[#00C9B7] text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-black leading-tight mb-6">
+                    <h2 class="text-[#00B8D4] text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-black leading-tight mb-6">
                         FINANZAS
                     </h2>
 
@@ -44,7 +44,7 @@
                     <p class="text-gray-200 text-lg sm:text-xl lg:text-2xl font-medium mb-8 max-w-md mx-auto lg:mx-0 leading-relaxed">
                         <span class="text-white font-bold">Emprende</span>, 
                         <span class="text-[#00C9B7] font-bold">establece</span> y 
-                        <span class="text-[#009688] font-bold">crece</span> 
+                        <span class="text-[#00C9B7] font-bold">crece</span> 
                         con nosotros en Arequipa
                     </p>
 
@@ -61,7 +61,7 @@
                         </div>
                         <div class="h-14 w-px bg-[#00C9B7]/30"></div>
                         <div class="text-center">
-                            <div class="text-3xl font-bold text-[#009688]">24/7</div>
+                            <div class="text-3xl font-bold text-[#00C9B7]">24/7</div>
                             <div class="text-xs text-gray-300">Soporte</div>
                         </div>
                     </div>
@@ -363,7 +363,55 @@
     </div>
 
 
+    <!-- Hero Section -->
+    <section class="relative bg-gradient-to-r from-[#1B3A5F] to-[#2B4A6F] text-white py-20 px-6 overflow-hidden">
+        <!-- Líneas decorativas izquierda -->
+        <div class="absolute left-0 top-0 w-20 h-full">
+            <div class="absolute top-10 left-4 w-16 h-0.5 bg-[#00C9B7] transform -rotate-45"></div>
+            <div class="absolute top-16 left-2 w-12 h-0.5 bg-[#009688] transform -rotate-45"></div>
+            <div class="absolute top-24 left-6 w-10 h-0.5 bg-[#00C9B7] transform -rotate-45"></div>
+            <div class="absolute top-32 left-1 w-14 h-0.5 bg-[#009688] transform -rotate-45"></div>
+            <div class="absolute top-40 left-5 w-8 h-0.5 bg-[#00C9B7] transform -rotate-45"></div>
+        </div>
 
+        <!-- Líneas decorativas derecha -->
+        <div class="absolute right-0 top-0 w-20 h-full">
+            <div class="absolute top-10 right-4 w-16 h-0.5 bg-[#00C9B7] transform rotate-45"></div>
+            <div class="absolute top-16 right-2 w-12 h-0.5 bg-[#009688] transform rotate-45"></div>
+            <div class="absolute top-24 right-6 w-10 h-0.5 bg-[#00C9B7] transform rotate-45"></div>
+            <div class="absolute top-32 right-1 w-14 h-0.5 bg-[#009688] transform rotate-45"></div>
+            <div class="absolute top-40 right-5 w-8 h-0.5 bg-[#00C9B7] transform rotate-45"></div>
+        </div>
+
+        <!-- Contenido Principal -->
+        <div class="relative max-w-6xl mx-auto flex items-center justify-between">
+            <!-- Contenido Izquierdo -->
+            <div class="flex-1 pr-8">
+                <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 leading-tight">
+                    ¡Empieza ahora!
+                </h1>
+                <p class="text-xl md:text-2xl mb-8 opacity-90">
+                    Nuestros planes fueron diseñados a la medida de tus necesidades
+                </p>
+
+                <!-- Cruces decorativas -->
+                <div class="flex space-x-6 mb-8">
+                    <div class="grid grid-cols-4 gap-2">
+                        <div class="w-4 h-4 text-[#00C9B7] opacity-70">✕</div>
+                        <div class="w-4 h-4 text-[#009688] opacity-70">✕</div>
+                        <div class="w-4 h-4 text-[#00C9B7] opacity-70">✕</div>
+                        <div class="w-4 h-4 text-[#009688] opacity-70">✕</div>
+                    </div>
+                    <div class="grid grid-cols-4 gap-2">
+                        <div class="w-4 h-4 text-[#009688] opacity-70">✕</div>
+                        <div class="w-4 h-4 text-[#00C9B7] opacity-70">✕</div>
+                        <div class="w-4 h-4 text-[#009688] opacity-70">✕</div>
+                        <div class="w-4 h-4 text-[#00C9B7] opacity-70">✕</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <div id="motivo-section" class="bg-gradient-to-br from-gray-50 to-white py-20">
@@ -486,59 +534,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-    <!-- Hero Section -->
-    <section class="relative bg-gradient-to-r from-[#1B3A5F] to-[#2B4A6F] text-white py-20 px-6 overflow-hidden">
-        <!-- Líneas decorativas izquierda -->
-        <div class="absolute left-0 top-0 w-20 h-full">
-            <div class="absolute top-10 left-4 w-16 h-0.5 bg-[#00C9B7] transform -rotate-45"></div>
-            <div class="absolute top-16 left-2 w-12 h-0.5 bg-[#009688] transform -rotate-45"></div>
-            <div class="absolute top-24 left-6 w-10 h-0.5 bg-[#00C9B7] transform -rotate-45"></div>
-            <div class="absolute top-32 left-1 w-14 h-0.5 bg-[#009688] transform -rotate-45"></div>
-            <div class="absolute top-40 left-5 w-8 h-0.5 bg-[#00C9B7] transform -rotate-45"></div>
-        </div>
-
-        <!-- Líneas decorativas derecha -->
-        <div class="absolute right-0 top-0 w-20 h-full">
-            <div class="absolute top-10 right-4 w-16 h-0.5 bg-[#00C9B7] transform rotate-45"></div>
-            <div class="absolute top-16 right-2 w-12 h-0.5 bg-[#009688] transform rotate-45"></div>
-            <div class="absolute top-24 right-6 w-10 h-0.5 bg-[#00C9B7] transform rotate-45"></div>
-            <div class="absolute top-32 right-1 w-14 h-0.5 bg-[#009688] transform rotate-45"></div>
-            <div class="absolute top-40 right-5 w-8 h-0.5 bg-[#00C9B7] transform rotate-45"></div>
-        </div>
-
-        <!-- Contenido Principal -->
-        <div class="relative max-w-6xl mx-auto flex items-center justify-between">
-            <!-- Contenido Izquierdo -->
-            <div class="flex-1 pr-8">
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6 leading-tight">
-                    ¡Empieza ahora!
-                </h1>
-                <p class="text-xl md:text-2xl mb-8 opacity-90">
-                    Nuestros planes fueron diseñados a la medida de tus necesidades
-                </p>
-
-                <!-- Cruces decorativas -->
-                <div class="flex space-x-6 mb-8">
-                    <div class="grid grid-cols-4 gap-2">
-                        <div class="w-4 h-4 text-[#00C9B7] opacity-70">✕</div>
-                        <div class="w-4 h-4 text-[#009688] opacity-70">✕</div>
-                        <div class="w-4 h-4 text-[#00C9B7] opacity-70">✕</div>
-                        <div class="w-4 h-4 text-[#009688] opacity-70">✕</div>
-                    </div>
-                    <div class="grid grid-cols-4 gap-2">
-                        <div class="w-4 h-4 text-[#009688] opacity-70">✕</div>
-                        <div class="w-4 h-4 text-[#00C9B7] opacity-70">✕</div>
-                        <div class="w-4 h-4 text-[#009688] opacity-70">✕</div>
-                        <div class="w-4 h-4 text-[#00C9B7] opacity-70">✕</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     
     <!-- SECCIÓN CONTACTO -->
