--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -132,8 +132,8 @@
                                 <div class="w-9 h-9 bg-gradient-to-br from-[#00C9B7] to-[#009688] rounded-lg flex items-center justify-center mb-2 group-hover:scale-110 transition-transform">
                                     <i class="fas fa-file-invoice text-white text-sm"></i>
                                 </div>
-                                <h4 class="text-xs font-bold text-[#1B3A5F] mb-1">Facturación</h4>
-                                <p class="text-xs text-gray-600">Sistema electrónico</p>
+                                <h4 class="text-xs font-bold text-[#1B3A5F] mb-1">Educación Financiera</h4>
+                                <p class="text-xs text-gray-600">Conocimiento financiero para construir tu futuro</p>
                             </div>
                         </div>
 
@@ -329,16 +329,16 @@
                     <div class="p-6">
                         <div class="flex items-center gap-2 mb-3">
                             <i class="fas fa-file-invoice text-[#00C9B7] text-lg"></i>
-                            <h3 class="text-xl font-bold text-[#1B3A5F]">Facturación Electrónica</h3>
+                            <h3 class="text-xl font-bold text-[#1B3A5F]">Educación Financiera</h3>
                         </div>
                         
                         <p class="text-gray-600 text-sm leading-relaxed mb-4">
-                            Sistema ágil para emitir boletas y facturas en segundos. Gestiona tus ventas desde cualquier dispositivo de forma rápida y segura.
+                            Aprende a administrar mejor tu dinero, ahorrar inteligentemente y tomar decisiones financieras seguras. Ideal para jóvenes, emprendedores y familias.
                         </p>
                         
                         <div class="bg-[#00C9B7]/5 rounded-lg p-3 border-l-3 border-[#00C9B7]">
                             <p class="text-xs text-gray-700 italic">
-                                "Facturación fácil, rápida y 100% segura"
+                                "Conocimiento financiero para construir tu futuro"
                             </p>
                         </div>
                     </div>
