Actualizacion de datos, falta el chatbot

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
             <img 
                 src="./assets/images/SERVICIOS-DE-CONTABILIDAD.jpg" 
                 class="absolute inset-0 w-full h-full object-cover"
-                alt="Constitución de Empresas - Nexa Finanzas"
+                alt="Constitución de Empresas - Kallpa Finanzas"
             />
 
             <div class="absolute inset-0 bg-black/70"></div>
@@ -245,23 +245,6 @@
                                     />
                                 </div>
 
-                                <div class="space-y-1.5">
-                                    <label class="block text-xs font-bold text-[#1B3A5F]" for="service">
-                                        <i class="fas fa-briefcase text-[#00C9B7] mr-1.5"></i>Tipo de Servicio
-                                    </label>
-                                    <select 
-                                        class="w-full rounded-lg border-2 border-gray-200 h-10 px-3 text-sm transition-all duration-200 focus:outline-none focus:border-[#00C9B7] focus:ring-2 focus:ring-[#00C9B7]/20" 
-                                        style="color: #1B3A5F;"
-                                        id="service"
-                                        required
-                                    >
-                                        <option>Constitución de Empresa</option>
-                                        <option>Contabilidad General</option>
-                                        <option>Facturación Electrónica</option>
-                                        <option>Asesoría Tributaria</option>
-                                        <option>Otro</option>
-                                    </select>
-                                </div>
                                 
                                 <div class="space-y-1.5 flex-1">
                                     <label class="block text-xs font-bold text-[#1B3A5F]" for="message">
