--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,7 +11,7 @@
             <img 
                 src="./assets/images/p2.webp" 
                 class="absolute inset-0 w-full h-full object-cover shadow-xl"
-                alt="Portada Nexa Finanzas"
+                alt="Portada Kallpa Finanzas"
             />
 
             <!-- Capa oscura encima -->
@@ -85,10 +85,12 @@
                     <!-- Texto Principal -->
                     <div class="bg-white rounded-2xl p-8 shadow-xl border-2 border-gray-100">
                         <p class="text-gray-700 text-base leading-relaxed mb-4">
-                            En <strong class="text-[#1B3A5F]">Nexa Finanzas</strong> somos un estudio contable <strong class="text-[#00C9B7]">híbrido</strong> (presencial y digital) que acompaña a las micro y pequeñas empresas (MYPES) de Arequipa en su formalización, gestión contable y financiera.
+                            En <strong class="text-[#1B3A5F]">Kallpa Finanzas</strong> creemos que la educación financiera es la clave para transformar la realidad económica de los emprendedores y pequeños negocios.
+                            Nuestro propósito es enseñar de forma simple y práctica cómo manejar el dinero, planificar las finanzas y tomar decisiones inteligentes que impulsen el crecimiento.
                         </p>
                         <p class="text-gray-600 text-sm leading-relaxed">
-                            Ofrecemos un servicio cercano y flexible, combinando tecnología y asesoría personalizada. También ayudamos a los emprendedores con educación financiera, para que puedan acceder a créditos y llevar un mejor control de sus ingresos y egresos, asegurando así un crecimiento más seguro y sostenible.
+                            A través de contenidos educativos, asesoría digital y el acompañamiento personalizado de nuestra inteligencia artificial Kallpa Finanzas  , ayudamos a que cada emprendedor fortalezca sus conocimientos financieros y avance hacia la formalización y sostenibilidad de su negocio.
+                            Porque aprender sobre finanzas no debe ser complicado, sino una oportunidad para crecer, formalizarse y alcanzar la estabilidad económica.
                         </p>
                     </div>
 
@@ -191,7 +193,9 @@
                             </div>
                         </div>
                         <p class="text-gray-700 leading-relaxed text-sm mb-5">
-                            Ayudar a las MYPES de Arequipa a formalizarse y crecer con <strong class="text-[#1B3A5F]">servicios contables híbridos y educación financiera</strong> que facilite el acceso a créditos y un mejor control de sus finanzas.
+                            Brindar <strong class="text-[#1B3A5F]">educación financiera accesible y práctica</strong> a emprendedores y pequeños negocios, ayudándolos a mejorar la gestión de sus finanzas y avanzar hacia la formalización.
+                            <br>
+                            En <strong class="text-[#1B3A5F]">Kallpa Finanzas </strong>promovemos el aprendizaje continuo mediante recursos digitales, asesorías personalizadas y un chatbot interactivo que guía a los usuarios en su camino hacia la estabilidad económica.
                         </p>
                         <div class="flex gap-2 pt-5 border-t border-gray-200">
                             <div class="w-2 h-2 bg-[#00C9B7] rounded-full"></div>
@@ -212,7 +216,7 @@
                             </div>
                         </div>
                         <p class="text-white leading-relaxed text-sm mb-5">
-                            Ser reconocidos como <strong>el socio financiero de confianza</strong> para las MYPES en Arequipa, ofreciendo soluciones accesibles, digitales y personalizadas que fortalezcan su gestión y promuevan un desarrollo empresarial sostenible.
+                            Ser la <strong>plataforma líder en educación financiera para emprendedores peruanos </strong>, reconocida por su compromiso en fomentar la formalización, el crecimiento económico y la inclusión financiera en Arequipa 
                         </p>
                         <div class="flex gap-2 pt-5 border-t border-white/20">
                             <div class="w-2 h-2 bg-white rounded-full"></div>
@@ -526,24 +530,6 @@
                                         type="email"
                                         required
                                     />
-                                </div>
-
-                                <div class="space-y-1.5">
-                                    <label class="block text-xs font-bold text-[#1B3A5F]" for="service">
-                                        <i class="fas fa-briefcase text-[#00C9B7] mr-1.5"></i>Tipo de Servicio
-                                    </label>
-                                    <select 
-                                        class="w-full rounded-lg border-2 border-gray-200 h-10 px-3 text-sm transition-all duration-200 focus:outline-none focus:border-[#00C9B7] focus:ring-2 focus:ring-[#00C9B7]/20" 
-                                        style="color: #1B3A5F;"
-                                        id="service"
-                                        required
-                                    >
-                                        <option>Constitución de Empresa</option>
-                                        <option>Contabilidad General</option>
-                                        <option>Facturación Electrónica</option>
-                                        <option>Asesoría Tributaria</option>
-                                        <option>Otro</option>
-                                    </select>
                                 </div>
                                 
                                 <div class="space-y-1.5 flex-1">
