--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
                 <div class="bg-white rounded-2xl rounded-tl-none p-4 shadow-lg max-w-[85%] border border-gray-100">
                     <p class="text-gray-800 text-sm leading-relaxed">
-                        ¡Hola! 👋 Soy <strong class="text-[#00C9B7]">Sumak IA</strong>, tu asistente de <strong>Kallpa Finanzas</strong>.
+                        ¡Hola! 👋 Soy <strong class="text-[#00C9B7]">Kallpa IA</strong>, tu asistente de <strong>Kallpa Finanzas</strong>.
                     </p>
                     <div class="mt-3 p-3 bg-gradient-to-r from-[#00C9B7]/5 to-[#009688]/5 rounded-xl">
                         <p class="text-xs font-semibold text-[#1B3A5F] mb-2">📚 Puedo ayudarte con:</p>
