--- a/index.html
+++ b/index.html
@@ -386,12 +386,21 @@
                         
                         <div class="flex items-center space-x-4">
                             <div class="flex items-center space-x-5">
-                                <a href="#" class="hover:opacity-80"><i class="fab fa-tiktok text-lg"></i></a>
-                                <a href="#" class="hover:opacity-80"><i class="fab fa-facebook text-lg"></i></a>
-                                <a href="#" class="hover:opacity-80"><i class="fab fa-youtube text-lg"></i></a>
-                                <a href="#" class="hover:opacity-80"><i class="fab fa-instagram text-lg"></i></a>
+                                <a href="https://www.tiktok.com/@kallpafiananzas" target="_blank" class="hover:opacity-80">
+                                    <i class="fab fa-tiktok text-lg"></i>
+                                </a>
+                                <a href="https://www.facebook.com/profile.php?id=61583059784585" target="_blank" class="hover:opacity-80">
+                                    <i class="fab fa-facebook text-lg"></i>
+                                </a>
+                                <a href="https://www.youtube.com" target="_blank" class="hover:opacity-80">
+                                    <i class="fab fa-youtube text-lg"></i>
+                                </a>
+                                <a href="https://www.instagram.com/kallpafinanzas/" target="_blank" class="hover:opacity-80">
+                                    <i class="fab fa-instagram text-lg"></i>
+                                </a>
                             </div>
                         </div>
+
                     </div>
                 </div>    
 
