--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -107,8 +107,8 @@
                     <i class="fas fa-envelope text-blue-900 text-2xl"></i>
                 </div>
                 <h3 class="text-xl font-bold mb-3">CORREO</h3>
-                <p class="text-blue-50 mb-6">nexafinanzas@gmail.com</p>
-                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=nexafinanzas@gmail.com" 
+                <p class="text-blue-50 mb-6">kallpafinanzas@gmail.com</p>
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=kallpafinanzas@gmail.com" 
                     target="_blank" 
                     class="inline-block bg-white text-[#00C9B7] px-6 py-2 rounded-lg font-semibold hover:bg-blue-50 transition">
                     Escribir
@@ -312,7 +312,7 @@
                                     </div>
                                     <div>
                                         <p class="text-xs font-bold text-[#1B3A5F] mb-0.5">Email</p>
-                                        <p class="text-xs" style="color: #2B5A8C;">nexafinanzas@gmail.com </p>
+                                        <p class="text-xs" style="color: #2B5A8C;">kallpafinanzas@gmail.com</p>
                                     </div>
                                 </div>
 
