--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -598,7 +598,7 @@
                                     </div>
                                     <div>
                                         <p class="text-xs font-bold text-[#1B3A5F] mb-0.5">Email</p>
-                                        <p class="text-xs" style="color: #2B5A8C;">nexafinanzas@gmail.com </p>
+                                        <p class="text-xs" style="color: #2B5A8C;">kallpafinanzas@gmail.com</p>
                                     </div>
                                 </div>
 
