Correcion del contenido

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,9 +77,8 @@
                 </div>
 
                 <p class="text-base sm:text-lg text-gray-600 max-w-2xl mx-auto leading-relaxed">
-                Expertos en <span class="text-blue-600 font-semibold">constitución de empresas</span>,
-                <span class="text-blue-600 font-semibold">contabilidad</span> y
-                <span class="text-blue-600 font-semibold">facturación electrónica</span>.
+                Expertos en <span class="text-blue-600 font-semibold">constitución de empresas</span> y
+                <span class="text-blue-600 font-semibold">educacion financiera</span>.
                 </p>
 
                 <div class="flex flex-wrap justify-center items-center gap-4 mt-8 opacity-70 text-sm text-gray-500">
