--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -33,7 +33,7 @@
 
                 <!-- Subtítulo -->
                 <p class="text-gray-200 text-base sm:text-lg lg:text-xl xl:text-2xl font-medium max-w-2xl pb-8 leading-relaxed">
-                    Emprende, establece y crece con servicios contables especializados en Arequipa
+                    Emprende, establece y crece con nuestros servicios de educacion financiera en Arequipa
                 </p>
 
                 <!-- Botón WhatsApp con verde/turquesa -->
