--- a/pages/constitucion.html
+++ b/pages/constitucion.html
@@ -1068,10 +1068,10 @@
                         <i class="fas fa-map-marked-alt text-white text-2xl"></i>
                     </div>
                     <h3 class="text-lg font-bold text-[#1B3A5F] mb-3">
-                        Cobertura nacional
+                        Cobertura en todo Arequipa
                     </h3>
                     <p class="text-gray-600 text-sm leading-relaxed">
-                        Disponible para todo el Perú
+                        Con un enfoque especial para la ciudad de Arequipa.
                     </p>
                 </div>
 
